Fixed centered tagline on small devices
The tagline was not centered when the device's width was smaller than ~315px

--- a/app/home/home.module.scss
+++ b/app/home/home.module.scss
@@ -18,7 +18,8 @@
 .tagline {
   margin-bottom: 2rem;
   color: var(--font-color-subtext);
-
+  text-align: center;
+  
   @media (max-width: 480px) {
     margin-bottom: 1.5rem;
   }
